--- a/entrega4.qmd
+++ b/entrega4.qmd
@@ -532,16 +532,63 @@ El mejor experimento, que podemos hacer con lo estudiado, es aquel que combina d
 ```{=html}
 <div id="comments"></div>
 <script>
-  (function() {
-    var script = document.createElement('script');
+  // Función para obtener el tema actual de Quarto
+  function getQuartoTheme() {
+    const body = document.body;
+    const theme = body.getAttribute('data-quarto-theme') || 
+                  (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+    return theme === 'dark' ? 'github-dark' : 'github-light';
+  }
+
+  // Función para crear/cargar Utteranc.es con el tema correcto
+  function loadUtterances() {
+    const container = document.getElementById('comments');
+    const existingScript = container.querySelector('script');
+    if (existingScript) {
+      existingScript.remove();
+    }
+
+    const script = document.createElement('script');
     script.src = 'https://utteranc.es/client.js';
     script.setAttribute('repo', 'MarcosGarciaGutierrez/Estadistica_entrega_4');
     script.setAttribute('issue-term', 'pathname');
     script.setAttribute('label', 'comentario');
-    script.setAttribute('theme', 'github-dark');
+    script.setAttribute('theme', getQuartoTheme());
     script.setAttribute('crossorigin', 'anonymous');
     script.async = true;
-    document.getElementById('comments').appendChild(script);
-  })();
+
+    container.appendChild(script);
+  }
+
+  // Cargar al inicio
+  document.addEventListener('DOMContentLoaded', loadUtterances);
+
+  // Escuchar cambios de tema
+  const observer = new MutationObserver(loadUtterances);
+  observer.observe(document.body, {
+    attributes: true,
+    attributeFilter: ['data-quarto-theme']
+  });
 </script>
+
+<style>
+  /* Hacer el contenedor transparente */
+  .utterances-frame {
+    background-color: transparent !important;
+  }
+  
+  /* Quitar borde */
+  #comments {
+    border: none !important;
+    padding: 0 !important;
+  }
+</style>
+```
+
+
+
+
+
+
+
 # Bibliografia
